--- a/rick_and_morty_app/package.json
+++ b/rick_and_morty_app/package.json
@@ -8,6 +8,8 @@
     "@testing-library/user-event": "^7.2.1",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
+    "react-fontawesome": "^1.7.1",
+    "react-materialize": "^3.9.2",
     "react-scripts": "3.4.1"
   },
   "scripts": {
