--- a/rick_and_morty_app/package.json
+++ b/rick_and_morty_app/package.json
@@ -9,6 +9,7 @@
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-fontawesome": "^1.7.1",
+    "react-icons": "^3.10.0",
     "react-materialize": "^3.9.2",
     "react-scripts": "3.4.1"
   },
