--- a/rick_and_morty_app/package.json
+++ b/rick_and_morty_app/package.json
@@ -7,6 +7,7 @@
     "@testing-library/react": "^9.5.0",
     "@testing-library/user-event": "^7.2.1",
     "react": "^16.13.1",
+    "react-css-modules": "^4.7.11",
     "react-dom": "^16.13.1",
     "react-fontawesome": "^1.7.1",
     "react-icons": "^3.10.0",
