--- a/rick_and_morty_app/package.json
+++ b/rick_and_morty_app/package.json
@@ -12,6 +12,8 @@
     "react-fontawesome": "^1.7.1",
     "react-icons": "^3.10.0",
     "react-materialize": "^3.9.2",
+    "react-router": "^5.2.0",
+    "react-router-dom": "^5.2.0",
     "react-scripts": "3.4.1"
   },
   "scripts": {
